--- a/index.html
+++ b/index.html
@@ -2,104 +2,178 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="utf-8">
-    
-    <title>Fruit juice Drop | Taste a new fruit juice every month</title>
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<meta charset="utf-8">
+
+	<title>Fruit juice Drop | Taste a new fruit juice every month</title>
+	<meta name="viewport" content="width=device=width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 </head>
 
 <body>
-    <article class="container">
-        <!-- Callout -->
-        <section class="callout">
-            <h1>The finest fruit juices delivered to your doorstep.</h1>
-            <p class="lead">Sign up today to start receiving the world's best fruit juices every month. 
-            <s>3.99€</s> <strong><mark>First one is free!</mark></strong></p>
-            <button class="btn btn-success btn-lg">Sign up!</button>
-            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
-        </section>
-        <!-- /.callout -->
-        <hr>
 
-        <!-- Quotes -->
-        <section class="quotes">
-            <h2 class="text-uppercase">Quotes:</h2>
-            <blockquote class="blockquote">
-                <p>I've been introduced to more than 10 great international fruit juices I never knew about.</p>
-                <p>- Jane Doe</p>
-            </blockquote>
-            <blockquote class="blockquote">
-                <p>I haven't took vitamin supplements for months!</p>
-                <p>- Jane Doe</p>
-            </blockquote>
-        </section>
-        <!-- /.quotes -->
-        <hr>
+	<!--Nav-->
+	<nav class="navbar navbar-light navbar-expand-sm bg-light">
+		<a href="/" class="navbar-brand">
+			Fruit juice Drop</a>
+		<ul class="navbar-nav mr-auto">
+			<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+			<li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
+			<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
+		</ul>
 
-        <!-- Features -->
-        <section class="features">
-            <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
-            <div class="feature">
-                <h3>Feature 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
-            <div class="feature">
-                <h3>Feature 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
-        </section>
-        <!-- /.features -->
+		<div class="d-none d-md-block">
+			<p class="navbar-text my-auto mr-2"><i>Great fruit juice delivered to your door</i></p>
+			<a href="/login">Sign In / Sign Up</a>
+		</div>
+		<!--</div>-->
+	</nav>
 
-        <!-- Monthly favorites -->
-        <section class="monthly_favorites">
-            <h2 class="text-uppercase">Monthly favorites</h2>
-            <table class="table table-striped table-dark">
-                <thead>
-                    <tr>
-                        <th scope="col">name</th>
-                        <th scope="col">origin</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <!-- <th scope="row"></th> -->
-                        <td>Mango</td>
-                        <td>Haiti</td>
-                    </tr>
-                    <tr>
-                        <!-- <th scope="row"></th> -->
-                        <td>Nectarine</td>
-                        <td>France</td>
-                    </tr>
-                    <tr>
-                        <!-- <th scope="row"></th> -->
-                        <td>Kiwi</td>
-                        <td>New Zealand</td>
-                    </tr>
-                    <tr>
-                        <!-- <th scope="row"></th> -->
-                        <td>Papaya</td>
-                        <td>Malaysia</td>
-                    </tr>
-                    <tr>
-                        <!-- <th scope="row"></th> -->
-                        <td>Banana</td>
-                        <td>Cuba</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-        <!-- /.monthly_favorites-->
-    </article>
+	<article class="container mt-3">
+		<!-- Callout -->
+		<div class="row">
+			<div class="col-12">
+				<section class="callout jumbotron text-center">
+					<h1>The finest fruit juices delivered to your doorstep.</h1>
+					<p class="lead">Sign up today to start receiving the world's best fruit juices every month.
+						<s class="d-none d-sm-inline">3.99€</s> 
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>First one is free!</mark></strong></p>
+					<button class="btn btn-success btn-lg">Sign up!</button>
+					<p class="text-muted">
+						<small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
+				</section>
+			</div>
+		</div>
+		<!-- /.callout -->
+		<hr>
+
+		<!-- Quotes -->
+		<section class="quotes">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Quotes:</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-6">
+					<blockquote class="blockquote">
+						<p>I've been introduced to more than 10 great international fruit juices I never knew about.</p>
+						<p>- Jane Doe</p>
+					</blockquote>
+				</div>
+				<div class="col-12 col-md-6">
+					<blockquote class="blockquote">
+						<p>I haven't took vitamin supplements for months!</p>
+						<p>- Jane Doe</p>
+					</blockquote>
+				</div>
+			</div>
+		</section>
+		<!-- /.quotes -->
+		<hr>
+
+		<!-- Features -->
+		<section class="features">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Features:</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3>Feature 1</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+							labore
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi
+							ut
+							aliquip ex ea commodo consequat.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3>Feature 2</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+							labore
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi
+							ut
+							aliquip ex ea commodo consequat.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
+				<div class="col-12 d-md-none d-lg d-lg-block col-lg-4">
+					<div class="feature">
+						<h3>Feature 3</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+							labore
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi
+							ut
+							aliquip ex ea commodo consequat.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /.features -->
+		<hr>
+
+		<!-- Monthly favorites -->
+		<section class="monthly_favorites">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase text-center">Monthly favorites</h2>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-auto">
+						<table class="table table-striped table-responsive">
+							<thead>
+								<tr>
+									<th scope="col">name</th>
+									<th scope="col">origin</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<!-- <th scope="row"></th> -->
+									<td>Mango</td>
+									<td>Haiti</td>
+								</tr>
+								<tr>
+									<!-- <th scope="row"></th> -->
+									<td>Ackee</td>
+									<td>Jamaica</td>
+								</tr>
+								<tr>
+									<!-- <th scope="row"></th> -->
+									<td>Kiwi</td>
+									<td>New Zealand</td>
+								</tr>
+								<tr>
+									<!-- <th scope="row"></th> -->
+									<td>Papaya</td>
+									<td>Malaysia</td>
+								</tr>
+								<tr>
+									<!-- <th scope="row"></th> -->
+									<td>Banana</td>
+									<td>Cuba</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+		</section>
+		<!-- /.monthly_favorites-->
+	</article>
 </body>
 
 </html>
