--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<meta name="viewport" content="width=device=width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<script src="https://kit.fontawesome.com/e576f39845.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<script src="https://kit.fontawesome.com/e576f39845.js" crossorigin="anonymous"></script>-->
 </head>
 
 <body>
@@ -37,7 +39,7 @@
 						<a class="dropdown-item" href="#">Pineapple Juice</a>
 					</div>
 				</li>
-                <!-- class="nav-item mr-2 d-block d-sm-none" -->
+				<!-- class="nav-item mr-2 d-block d-sm-none" -->
 				<li class="nav-item mr-2 d-block d-md-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
 			</ul>
 		</div>
@@ -48,37 +50,43 @@
 	</nav>
 	<!-- /navbar -->
 
-	<article class="container mt-3">
-
-		<!-- Alert -->
+	<!-- Alert -->
+	<!-- <div class="container alert-container">
 		<div class="row d-none d-sm-block">
 			<div class="col-12">
 				<div class="alert alert-warning">
-					<strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for 6! See <a href="">here</a> for details.
+					<strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for 6! See <a
+						href="">here</a> for details.
 				</div>
 			</div>
 		</div>
-		<!-- /alert -->
+	</div> -->
+	<!-- /alert -->
 
-		<!-- Callout -->
+	<!-- Callout -->
+	<div class="container-fluid callout-container">
+		<div class="opaque-overlay">&nbsp;</div>
 		<div class="row">
 			<div class="col-12">
 				<section class="callout jumbotron text-center">
-					<h1>The finest fruit juices delivered to your doorstep.</h1>
+					<h1 class="jumbotron-header">The finest fruit juices delivered to your doorstep.</h1>
+					<hr class="block-divider block-divider--blue">
+					</hr>
 					<p class="lead">Sign up today to start receiving the world's best fruit juices every month.
 						<s class="d-none d-sm-inline">3.99€</s>
 						<span class="d-inline d-sm-none"><br></span>
 						<strong><mark>First one is free!</mark></strong></p>
-					<button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign up!</button>
+					<button class="btn btn-lg btn--cta btn--orange" data-toggle="modal" data-target="#signUpModal">Sign up!</button>
 					<p class="text-muted">
-						<small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
+						<small>You must be over 18 to sign up to our service. Please, drink at will.</small></p>
 				</section>
 			</div>
 		</div>
-		<!-- /.callout -->
-		<hr>
+	</div>
+	<!-- /.callout -->
 
-		<!-- Quotes -->
+	<!-- Quotes -->
+	<div class="container quotes-container">
 		<section class="quotes">
 			<div class="row">
 				<div class="col-12 my-5">
@@ -116,10 +124,11 @@
 						</div>
 					</div>
 		</section>
-		<!-- /.quotes -->
-		<hr>
+	</div>
+	<!-- /.quotes -->
 
-		<!-- Features -->
+	<!-- Features -->
+	<div class="container feature-container">
 		<section class="features">
 			<div class="row">
 				<div class="col-12 my-5">
@@ -131,9 +140,11 @@
 					<div class="feature">
 						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
 							<span class="badge badge-success">NEW!</span></h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							ut
 							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+							laboris
 							nisi
 							ut
 							aliquip ex ea commodo consequat.</p>
@@ -143,9 +154,11 @@
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="feature">
 						<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							ut
 							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+							laboris
 							nisi
 							ut
 							aliquip ex ea commodo consequat.</p>
@@ -155,9 +168,11 @@
 				<div class="col-12 d-md-none d-lg d-lg-block col-lg-4">
 					<div class="feature">
 						<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							ut
 							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+							laboris
 							nisi
 							ut
 							aliquip ex ea commodo consequat.</p>
@@ -166,10 +181,11 @@
 				</div>
 			</div>
 		</section>
-		<!-- /.features -->
-		<hr>
+	</div>
+	<!-- /.features -->
 
-		<!-- Monthly favorites -->
+	<!-- Monthly favorites -->
+	<div class="container  monthly_favorites-container">
 		<section class="monthly_favorites">
 			<div class="row">
 				<div class="col-12 my-5">
@@ -216,8 +232,8 @@
 				</div>
 			</div>
 		</section>
-		<!-- /.monthly_favorites-->
-	</article>
+	</div>
+	<!-- /.monthly_favorites-->
 
 	<!-- modal -->
 	<div class="modal" tabindex="-1" role="dialog" id="signUpModal">
@@ -240,11 +256,11 @@
 							<label for="password">Password</label>
 							<input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
-                        <div class="form-group">
-							<label for="repeatPassword">Repeat Password</label>
-							<input type="password" class="form-control" id="repeatPassword" placeholder="Reapeat Password">
+							<div class="form-group">
+								<label for="repeatPassword">Repeat Password</label>
+								<input type="password" class="form-control" id="repeatPassword" placeholder="Reapeat Password">
                         </div>
-                        <button type="submit" class="btn btn-success">Submit</button>
+								<button type="submit" class="btn btn-success">Submit</button>
 					</form>
 				</div>
 			</div>
