--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="container-fluid navalert-container">
 
 		<div class="container-fluid alert-container">
-			<div class="row d-none d-sm-block">
+			<div class="row d-block">
 				<div class="col-12">
 					<div class="site-wide-alert alert alert-warning">
 						<strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for 6! See <a
