--- a/index.html
+++ b/index.html
@@ -68,16 +68,18 @@
 		<div class="row">
 			<div class="col-12">
 				<section class="callout jumbotron text-center">
-					<h1 class="jumbotron-header">The finest fruit juices delivered to your doorstep.</h1>
-					<hr class="block-divider block-divider--blue">
-					</hr>
-					<p class="lead">Sign up today to start receiving the world's best fruit juices every month.
-						<s class="d-none d-sm-inline">3.99€</s>
-						<span class="d-inline d-sm-none"><br></span>
-						<strong><mark>First one is free!</mark></strong></p>
-					<button class="btn btn-lg btn--cta btn--orange" data-toggle="modal" data-target="#signUpModal">Sign up!</button>
-					<p class="text-muted">
-						<small>You must be over 18 to sign up to our service. Please, drink at will.</small></p>
+					<div class="page-header">
+						<h1 class="jumbotron-header">The finest fruit juices delivered to your
+							doorstep.</h1>
+						<hr class="block-divider block-divider--orange">
+						<p class="lead">Sign up today to start receiving the world's best fruit juices every month.
+							<s class="d-none d-sm-inline">3.99€</s>
+							<span class="d-inline d-sm-none"><br></span>
+							<strong><mark>First one is free!</mark></strong></p>
+						<button class="btn btn-lg btn--cta btn--orange" data-toggle="modal" data-target="#signUpModal">Sign up!</button>
+						<p class="text-muted">
+							<small>You must be over 18 to sign up to our service. Please, drink at will.</small></p>
+					</div>
 				</section>
 			</div>
 		</div>
@@ -85,152 +87,164 @@
 	<!-- /.callout -->
 
 	<!-- Quotes -->
-	<div class="container quotes-container">
-		<section class="quotes">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase">Quotes:</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 col-md-6">
-					<div class="media">
-						<div class="d-none d-sm-block">
-							<img src="images/woman.jpg" class="rounded-circle mr-3" height="100" width="100">
-                        </div>
-							<div class="media-body">
-								<blockquote class="blockquote">
-									<p>I've been introduced to more than 10 great international fruit juices I never
-										knew
-										about.</p>
-									<p>- Jane Doe</p>
-								</blockquote>
-							</div>
-						</div>
+	<div class="container-wrapper">
+		<div class="container quotes-container content-container">
+			<section class="quotes">
+				<div class="row">
+					<div class="col-12 page-header">
+						<h2 class="text-uppercase">Quotes</h2>
+						<hr class="block-divider block-divider--short">
 					</div>
+				</div>
+				<div class="row">
 					<div class="col-12 col-md-6">
 						<div class="media">
 							<div class="d-none d-sm-block">
-								<img src="images/man.jpg" class="rounded-circle mr-3" height="100" width="100">
-							</div>
+								<img src="images/woman.jpg" class="rounded-circle mr-3" height="100" width="100">
+                        </div>
 								<div class="media-body">
 									<blockquote class="blockquote">
-										<p>I haven't took vitamin supplements for months!</p>
-										<p>- Jane Doe</p>
+										<p>I've been introduced to more than 10 great international fruit juices I never
+											knew
+											about.</p>
+										<p>- Ada Johnson</p>
 									</blockquote>
 								</div>
 							</div>
 						</div>
-					</div>
-		</section>
+						<div class="col-12 col-md-6">
+							<div class="media">
+								<div class="d-none d-sm-block">
+									<img src="images/man.jpg" class="rounded-circle mr-3" height="100" width="100">
+							</div>
+									<div class="media-body">
+										<blockquote class="blockquote">
+											<p>I haven't took vitamin supplements for months and my energy levels are
+												up!</p>
+											<p>- Jack Williams</p>
+										</blockquote>
+									</div>
+								</div>
+							</div>
+						</div>
+			</section>
+		</div>
 	</div>
 	<!-- /.quotes -->
 
 	<!-- Features -->
-	<div class="container feature-container">
-		<section class="features">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase">Features:</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
-							<span class="badge badge-success">NEW!</span></h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-							ut
-							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-							laboris
-							nisi
-							ut
-							aliquip ex ea commodo consequat.</p>
-						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+	<div class="container-wrapper container-wrapper--red">
+		<div class="container features-container content-container">
+			<section class="features">
+				<div class="row">
+					<div class="col-12 page-header">
+						<h2 class="text-uppercase">Features</h2>
+						<hr class="block-divider block-divider--short block-divider--white">
 					</div>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-							ut
-							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-							laboris
-							nisi
-							ut
-							aliquip ex ea commodo consequat.</p>
-						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+				<div class="row">
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature">
+							<h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1
+								<span class="badge badge-success">NEW!</span></h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut
+								labore
+								et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+								laboris
+								nisi
+								ut
+								aliquip ex ea commodo consequat.</p>
+							<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature">
+							<h3><i class="fas fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut
+								labore
+								et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+								laboris
+								nisi
+								ut
+								aliquip ex ea commodo consequat.</p>
+							<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+						</div>
+					</div>
+					<div class="col-12 d-md-none d-lg d-lg-block col-lg-4">
+						<div class="feature">
+							<h3><i class="fas fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+								ut
+								labore
+								et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+								laboris
+								nisi
+								ut
+								aliquip ex ea commodo consequat.</p>
+							<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+						</div>
 					</div>
 				</div>
-				<div class="col-12 d-md-none d-lg d-lg-block col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-							ut
-							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-							laboris
-							nisi
-							ut
-							aliquip ex ea commodo consequat.</p>
-						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-					</div>
-				</div>
-			</div>
-		</section>
+			</section>
+		</div>
 	</div>
 	<!-- /.features -->
 
 	<!-- Monthly favorites -->
-	<div class="container  monthly_favorites-container">
-		<section class="monthly_favorites">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase text-center">Monthly favorites</h2>
-				</div>
+	<div class="container-wrapper">
+		<div class="container-fluid  favorites-container content-container">
+			<div class="opaque-overlay">
+				<section class="favorites">
+					<div class="row">
+						<div class="col-12 page-header">
+							<h2 class="text-uppercase">Monthly favorites</h2>
+							<hr class="block-divider block-divider--short block-divider--lightgrey">
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-12">
+							<div class="favorite">
+								<div class="col-auto">
+									<table class="table table-responsive d-inline">
+										<thead>
+											<tr>
+												<th scope="col">name</th>
+												<th scope="col">origin</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Mango juice</td>
+												<td>Haiti</td>
+											</tr>
+											<tr>
+												<td>Ackee juice</td>
+												<td>Jamaica</td>
+											</tr>
+											<tr>
+												<td>Kiwi juice</td>
+												<td>New Zealand</td>
+											</tr>
+											<tr>
+												<td>Papaya juice</td>
+												<td>Malaysia</td>
+											</tr>
+											<tr>
+												<td>Banana juice</td>
+												<td>Cuba</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</div>
-			<div class="row justify-content-center">
-				<div class="col-auto">
-					<table class="table table-striped table-responsive">
-						<thead>
-							<tr>
-								<th scope="col">name</th>
-								<th scope="col">origin</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<!-- <th scope="row"></th> -->
-								<td>Mango juice</td>
-								<td>Haiti</td>
-							</tr>
-							<tr>
-								<!-- <th scope="row"></th> -->
-								<td>Ackee juice</td>
-								<td>Jamaica</td>
-							</tr>
-							<tr>
-								<!-- <th scope="row"></th> -->
-								<td>Kiwi juice</td>
-								<td>New Zealand</td>
-							</tr>
-							<tr>
-								<!-- <th scope="row"></th> -->
-								<td>Papaya juice</td>
-								<td>Malaysia</td>
-							</tr>
-							<tr>
-								<!-- <th scope="row"></th> -->
-								<td>Banana juice</td>
-								<td>Cuba</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-		</section>
+		</div>
 	</div>
 	<!-- /.monthly_favorites-->
 
