--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
 					<li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						<a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button"
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							Fruit juices
 						</a>
@@ -51,7 +51,6 @@
 							<a class="dropdown-item" href="#">Pineapple Juice</a>
 						</div>
 					</li>
-					<!-- class="nav-item mr-2 d-block d-sm-none" -->
 					<li class="nav-item mr-2 d-block d-md-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
 				</ul>
 			</div>
@@ -145,44 +144,23 @@
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="feature">
-							<h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1
+							<h3><i class="fas fa-gift d-none d-sm-block"></i> Gift option
 								<span class="badge badge-success">NEW!</span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut
-								labore
-								et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-								laboris
-								nisi
-								ut
-								aliquip ex ea commodo consequat.</p>
+							<p>Gift option for the people you love</p>
 							<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="feature">
-							<h3><i class="fas fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut
-								labore
-								et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-								laboris
-								nisi
-								ut
-								aliquip ex ea commodo consequat.</p>
+							<h3><i class="fas fa-credit-card d-none d-sm-block"></i> Secure paiement</h3>
+							<p>Secure paiement with Master card, Visa and American express</p>
 							<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
 						</div>
 					</div>
 					<div class="col-12 d-md-none d-lg d-lg-block col-lg-4">
 						<div class="feature">
-							<h3><i class="fas fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-								ut
-								labore
-								et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-								laboris
-								nisi
-								ut
-								aliquip ex ea commodo consequat.</p>
+							<h3><i class="fas fa-shipping-fast d-none d-sm-block"></i> Fast shipping</h3>
+							<p>Fast shipping guaranteed</p>
 							<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
 						</div>
 					</div>
@@ -271,7 +249,7 @@
                         </div>
 							<div class="form-group">
 								<label for="repeatPassword">Repeat Password</label>
-								<input type="password" class="form-control" id="repeatPassword" placeholder="Reapeat Password">
+								<input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
                         </div>
 								<button type="submit" class="btn btn-success">Submit</button>
 					</form>
