--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
 					<form>
 						<div class="form-group">
 							<label for="exampleInputEmail1">Email address</label>
-							<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+							<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email address" required>
 							<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 						</div>
 						<div class="form-group">
 							<label for="password">Password</label>
-							<input type="password" class="form-control" id="password" placeholder="Password">
+							<input type="password" class="form-control" id="password" placeholder="Password" required>
                         </div>
 							<div class="form-group">
 								<label for="repeatPassword">Repeat Password</label>
