--- a/index.html
+++ b/index.html
@@ -14,51 +14,48 @@
 </head>
 
 <body>
-
-	<div class="container-fluid navalert-container">
-
-		<div class="container-fluid alert-container">
-			<div class="row d-block">
-				<div class="col-12">
-					<div class="site-wide-alert alert alert-warning">
-						<strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for 6! See <a
-							href="">here</a> for details.
-					</div>
+	<div class="container-fluid alert-container">
+		<div class="row d-block">
+			<div class="col-12">
+				<div class="site-wide-alert alert alert-warning">
+					<strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for 6! See <a
+						href="">here</a> for details.
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<nav class="navbar navbar-dark navbar-expand-sm">
-			<a href="/" class="navbar-brand">
-				Fruit Juice Delight</a>
+	<nav class="navbar navbar-dark navbar-expand-sm">
+		<a href="/" class="navbar-brand">
+			Fruit Juice Delight</a>
 
-			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span></button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav mr-auto">
-					<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
-					<li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Fruit juices
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Lemonade</a>
-							<a class="dropdown-item" href="#">Orange Juice</a>
-							<a class="dropdown-item" href="#">Apple Juice</a>
-							<a class="dropdown-item" href="#">Grape Juice</a>
-							<a class="dropdown-item" href="#">Pineapple Juice</a>
-						</div>
-					</li>
-					<li class="nav-item mr-2 d-block d-md-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
-				</ul>
-			</div>
-			<div class="d-none d-md-block">
-				<p class="navbar-text my-auto mr-2"><i>Great fruit juices delivered to your door</i></p>
-				<a href="/login" class="btn btn--cta btn--orange">Sign In / Sign Up</a>
-			</div>
-		</nav>
+		<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span></button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav nav mr-auto">
+				<li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+				<li class="nav-item mr-2"><a class="nav-link" href="/">About</a></li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="/" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Fruit juices
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Lemonade</a>
+						<a class="dropdown-item" href="#">Orange Juice</a>
+						<a class="dropdown-item" href="#">Apple Juice</a>
+						<a class="dropdown-item" href="#">Grape Juice</a>
+						<a class="dropdown-item" href="#">Pineapple Juice</a>
+					</div>
+				</li>
+				<li class="nav-item mr-2 d-block d-md-none"><a class="nav-link" href="#">Sign In / Sign Up</a></li>
+			</ul>
+		</div>
+		<div class="d-none d-md-block">
+			<p class="navbar-text my-auto mr-2"><i>Great fruit juices delivered to your door</i></p>
+			<a href="#" class="btn btn--cta btn--orange">Sign In / Sign Up</a>
+		</div>
+	</nav>
 	</div>
 
 	<!-- Callout -->
@@ -104,8 +101,7 @@
 								<div class="media-body">
 									<blockquote class="blockquote">
 										<p>I've been introduced to more than 10 great international fruit juices I never
-											knew
-											about.</p>
+											knew about.</p>
 										<p>- Ada Johnson</p>
 									</blockquote>
 								</div>
