--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<script src="https://kit.fontawesome.com/e576f39845.js" crossorigin="anonymous"></script>-->
+	<script src="https://kit.fontawesome.com/e576f39845.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
