directory structure change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="../assets/css/style.css" type="text/css">
 	<script src="https://kit.fontawesome.com/e576f39845.js" crossorigin="anonymous"></script>
 </head>
 
@@ -56,7 +56,6 @@
 			<a href="#" class="btn btn--cta btn--orange">Sign In / Sign Up</a>
 		</div>
 	</nav>
-	</div>
 
 	<!-- Callout -->
 	<div class="container-fluid callout-container">
@@ -96,7 +95,7 @@
 					<div class="col-12 col-md-6">
 						<div class="media">
 							<div class="d-none d-sm-block">
-								<img src="images/woman.jpg" class="rounded-circle mr-3" height="100" width="100">
+								<img src="../assets/images/woman.jpg" class="rounded-circle mr-3" height="100" width="100">
                         </div>
 								<div class="media-body">
 									<blockquote class="blockquote">
@@ -110,7 +109,7 @@
 						<div class="col-12 col-md-6">
 							<div class="media">
 								<div class="d-none d-sm-block">
-									<img src="images/man.jpg" class="rounded-circle mr-3" height="100" width="100">
+									<img src="../assets/images/man.jpg" class="rounded-circle mr-3" height="100" width="100">
 							</div>
 									<div class="media-body">
 										<blockquote class="blockquote">
