modal color update, css clean up

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Alert -->
 	<div class="container-fluid alert-container">
 		<div class="row d-block">
 			<div class="col-12">
@@ -24,7 +25,9 @@
 			</div>
 		</div>
 	</div>
+    <!-- /.alert -->
 
+    <!-- Navbar -->
 	<nav class="navbar navbar-dark navbar-expand-sm">
 		<a href="/" class="navbar-brand">
 			Fruit Juice Delight</a>
@@ -56,6 +59,7 @@
 			<a href="#" class="btn btn--cta btn--orange">Sign In / Sign Up</a>
 		</div>
 	</nav>
+    <!-- /.navbar -->
 
 	<!-- Callout -->
 	<div class="container-fluid callout-container">
@@ -221,7 +225,7 @@
 	</div>
 	<!-- /.monthly_favorites-->
 
-	<!-- modal -->
+	<!-- Modal -->
 	<div class="modal" tabindex="-1" role="dialog" id="signUpModal">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
